--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,10 +1,9 @@
 :root {
    /* Colors */
-    --bg: #191919;
-    --text-light: #D9D9D9;
-    --text-medium-dark: #303030;
-    --text-dark: #191919;
-    --text-white: #D9D9D9;
+    --light-gray: #D9D9D9;
+    --medium-dark: #303030;
+    --dark: #191919;
+    --white: #D9D9D9;
     --accent-default: #BFFF00;
     --accent-dark: #94C600;
 
@@ -26,6 +25,11 @@
 
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-weight: var(--font-weight-regular);
+  color: var(--white);
+  background-color: var(--dark);    
 }
 
 h1,
@@ -35,7 +39,20 @@ h4,
 h5,
 h6 {
   margin: 0;
+  line-height: 1.2;
+  font-weight: var(--font-weight-bold);
+  color: var(--white);
 }
+
+p {
+    line-height: 1.5;
+    font-weight: var(--font-weight-regular);
+    color: var(--white);
+}
+
+a {
+    text-decoration: none;
+  }
 
 img {
   display: block;
