header and hero small update

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,4 @@
-@import url(/css/global/global.css);
+@import url(/css/global/global.css);    
+@import url(/css/components/header.css);
+@import url(/css/components/footer.css);    
+@import url(/css/components/hero.css);
