kinda done hero section

--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,9 +1,10 @@
 :root {
    /* Colors */
+    --white: #FFFFFF;
     --light-gray: #D9D9D9;
+    --hover-grey: #505050;
     --medium-dark: #303030;
     --dark: #191919;
-    --white: #D9D9D9;
     --accent-default: #BFFF00;
     --accent-dark: #94C600;
 
