impact section done. Trying to add arrow section

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -21,6 +21,7 @@ nav {
     padding: 0;
     margin: 0;
     color: var(--white);
+    font-size: var(--body);
 }
 
 /* Make sure the links also inherit the color */
