--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -14,7 +14,7 @@
     max-width: 100%;
     max-height: 90vh;
     min-height: 80vh;
-    background-color: var(--bg-dark);s
+    background-color: var(--bg-dark);
     z-index:1;
 }
 
@@ -60,7 +60,7 @@
     text-decoration: none;
     border-radius: 1px;
     font-weight: var(--font-weight-bold);
-    font-size: var(--font-size-body);
+    font-size: var(--body);
     transition: background-color 0.3s ease;
 }
 
@@ -75,7 +75,7 @@
     right: 3rem;
     z-index: 2;  
     color: white;
-    font-size: 1rem;
+    font-size: var(--body);
     display: flex;
     flex-direction: column;
     align-items: flex-end; 
