--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,4 @@
 @import url(/css/components/header.css);
 @import url(/css/components/footer.css);    
 @import url(/css/components/hero.css);
+@import url(/css/components/Impact.css);
