--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,6 @@
 @import url(/css/components/header.css);
 @import url(/css/components/footer.css);    
 @import url(/css/components/hero.css);
-@import url(/css/components/Impact.css);
+@import url(/css/components/impact.css);    
+@import url(/css/components/provide.css);   
+@import url(/css/components/testimonials.css);
