--- a/css/components/testimonials.css
+++ b/css/components/testimonials.css
@@ -1,4 +1,3 @@
-
 .testimonials {
     width: calc(100% - 6rem);  /* 3rem on each side */
     max-width: 75rem;
@@ -32,22 +31,24 @@
 .testimonial-image-wrapper img {
     width: 100%;
     height: auto;
-    aspect-ratio: 3/4;
     object-fit: cover;
     filter: drop-shadow(-3.125rem -3.125rem 0 var(--accent-default));
 }
 
 /* User Info */
 .testimonial-user-info {
-    margin-top: 2rem;
+    margin-top: 0;
 }
 
 .user-name {
+    margin: 0;
+    padding-top: 0.5rem;
     font-weight: var(--font-weight-bold);
     font-size: var(--h4);
 }
 
 .title {
+    margin: 0;  
     font-weight: var(--font-weight-regular);
     font-size: var(--body);
 }
@@ -56,7 +57,7 @@
 .testimonial-content-wrapper {
     flex: 1;
     position: relative;
-    padding-block: 6rem;  /* Space for quotes */
+    padding-block: 6rem; 
 }
 
 .testimonial-quote {
