popular post done

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,4 @@
 @import url(/css/components/impact.css);    
 @import url(/css/components/provide.css);   
 @import url(/css/components/testimonials.css);
+@import url(/css/components/popular.css);
