--- a/css/components/header.css
+++ b/css/components/header.css
@@ -10,7 +10,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 3rem;
+    padding-left: clamp(2rem, 8vw, 3rem);
+    padding-right: clamp(2rem, 8vw, 3rem);    
 }
 
 .nav-menu {
