--- a/css/components/provide.css
+++ b/css/components/provide.css
@@ -1,5 +1,5 @@
 .we-provide {
-    padding: 4rem 5%;
+    padding: clamp(2rem, 8vw, 10rem);
     position: relative;
     background-color: var(--accent-default);
 }
@@ -18,7 +18,6 @@
     grid-template-columns: 3fr 2fr;
     gap: 4rem;
     align-items: start;
-    margin: 0 160px 0 160px;
     align-items: center;    
 }
 
