--- a/css/global/global.css
+++ b/css/global/global.css
@@ -34,7 +34,8 @@ body {
   padding: 0;
   font-weight: var(--font-weight-regular);
   color: var(--white);
-  background-color: var(--dark);    
+  background-color: var(--dark);   
+  overflow-x: hidden; 
 }
 
 h1,
