--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -4,29 +4,26 @@
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center;
+    background-image: url('../../assets/background11.webp');
+    background-size: cover;
+    background-position: right;
     z-index: 0;  /* Lowest z-index */
 }
 
 .hero {
+    display: flex;
+    align-items: center;  /* Vertically center */
+    justify-content: flex-start; /* or center, depending on design */
     position: relative;
-    max-width: 100%;
-    max-height: 90vh;
-    min-height: 80vh;
-    background-color: var(--bg-dark);
-    z-index:1;
-}
-
-.hero-content {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    padding-left: 3rem; 
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%); 
-}
+    min-height: 70vh;
+    overflow: hidden;
+  }
+  
+  .hero-content {
+    position: relative; /* keep your z-index layering if needed */
+    padding: 2rem;
+  }
+  
 
 .hero-content h4 {
     margin-bottom: 1rem;
