--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,17 +1,19 @@
 header {
     position: fixed;  /* or absolute, depending on your needs */
     width: 100%;
+    height: auto;
     background-color: hsla(0, 0%, 0%, 0.4);
     padding: .5rem 0;  /* First value (1rem) is top/bottom, second value (3rem) is left/right */
     z-index: 10;  /* This ensures header stays above the background */
-    padding-left: clamp(2rem, 8vw, 3rem);
-    padding-right: clamp(2rem, 8vw, 3rem);
+
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: clamp(2rem, 8vw, 3rem);
+    padding-right: clamp(2rem, 8vw, 3rem);
 }
 
 .nav-menu {
@@ -31,3 +33,10 @@ nav {
     text-decoration: none;  /* Optional: removes underline from links */
 }
 
+.nav-menu a.active {
+    color: var(--accent-default);
+}
+
+.nav-menu a:hover {
+    color: var(--accent-default);
+}
