--- a/css/global/global.css
+++ b/css/global/global.css
@@ -30,6 +30,7 @@
   padding: 0;
 }
 body {
+  font-variant-ligatures: none; /* Disables all ligatures */
   margin: 0;
   padding: 0;
   font-weight: var(--font-weight-regular);
