--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
-@import url(/css/global/global.css);    
-@import url(/css/components/header.css);
-@import url(/css/components/footer.css);    
-@import url(/css/components/hero.css);
-@import url(/css/components/impact.css);    
-@import url(/css/components/provide.css);   
-@import url(/css/components/testimonials.css);
-@import url(/css/components/popular.css);
+@import url(global/global.css);    
+@import url(components/header.css);
+@import url(components/footer.css);    
+@import url(components/hero.css);
+@import url(components/impact.css);    
+@import url(components/provide.css);   
+@import url(components/testimonials.css);
+@import url(components/popular.css);   
+@import url(components/hub_popular.css);   
