--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -22,6 +22,10 @@ footer h2 {
  /* 28px as defined in global.css */
 }
 
+footer p {
+    font-size: var(--body);
+}
+
 .newsletter-form {
     margin-top: 1.5rem;
 }
