--- a/css/components/provide.css
+++ b/css/components/provide.css
@@ -18,10 +18,9 @@
 
 .provide-grid {
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 4rem;
-    align-items: start;
-    align-items: center;    
+    align-items: center;
 }
 
 .left-content h1 {
