--- a/css/components/popular.css
+++ b/css/components/popular.css
@@ -45,8 +45,7 @@
 .popular-posts {
   padding-left: clamp(2rem, 8vw, 3rem);
   padding-right: clamp(2rem, 8vw, 3rem);
-  margin-bottom: 6rem;
-  padding-top: 9rem;
+  margin-bottom: 9rem;
   width: 100%;
 }
 
@@ -165,6 +164,7 @@
   background-color: #D9D9D9;
   padding: 0.5rem 1rem;
   text-decoration: none;
+  border-radius: 0.125rem;
   color: var(--medium-dark);
   font-weight: var(--font-weight-bold);
 }
