--- a/css/components/testimonials.css
+++ b/css/components/testimonials.css
@@ -33,6 +33,7 @@
 .testimonial-image-wrapper img {
     width: 100%;
     min-width: 238px;
+    border-radius: 0.25rem;
     height: auto;
     object-fit: cover;
     filter: drop-shadow(-3.125rem -3.125rem 0 var(--accent-default));
