--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,40 @@
 /* Combined style.css from the original style.css and hub_style.css */
 
 /* Global Styles */
-@import url(global/global.css);
+@import url(/css/global/global.css);
 
 /* shared components */
-@import url(components/header.css);
-@import url(components/footer.css);
+@import url(/css/components/header.css);
+@import url(/css/components/footer.css);
+
 
 /* hub.html */
-@import url(components/hub_categories.css);
+@import url(./components/hub_categories.css);
+@import url(./components/hub_intro.css);
+@import url(./components/hub_voting.css);
+
 
 /* index.html */
-@import url(components/hero.css);
-@import url(components/impact.css);
-@import url(components/provide.css);
-@import url(components/testimonials.css);
+@import url(/css/components/hero.css);
+@import url(/css/components/impact.css);
+@import url(/css/components/provide.css);
+@import url(/css/components/testimonials.css);
+
 
 /* popular.html */
-@import url(components/popular.css);
+@import url(/css/components/popular.css);
 
+
+/* about.html */
+@import url(/css/components/about.css);
+
+
+/* voting.html */
+@import url(/css/components/hub_voting.css);
+
+
+/* contact.html */
+@import url(/css/components/contact.css);
+
+/* error.html */
+@import url(/css/components/error.css);
