--- a/css/components/contact.css
+++ b/css/components/contact.css
@@ -39,6 +39,10 @@
 }
 
 .contact-iframe {
+    position: relative;
+    border-radius: 0.25rem;
+    aspect-ratio: 16/9;
+    background: var(--very-dark);
     width: 700px;
     flex: 0 0 auto;
     height: 300px;
@@ -48,6 +52,15 @@
     width: 100%;
     height: 100%;
     border-radius: 0.25rem;
+}
+
+.lazy-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .map-section {
@@ -62,6 +75,7 @@
     width: 1432px;
     height: 450px;
     border-radius: 0.25rem;
+    background: var(--very-dark);
 }
 
 
@@ -76,6 +90,7 @@
     width: 1400px;
     height: 450px;
     border-radius: 0.25rem;
+    background: var(--very-dark);
 }
 
 .employee-section {
