--- a/css/global/global.css
+++ b/css/global/global.css
@@ -24,7 +24,12 @@
   --h4: clamp(1rem, calc(0.89rem + 0.48vw), 1.25rem);      /* 16px - 20px */
   --body: clamp(0.875rem, calc(0.82rem + 0.24vw), 1rem);   /* 14px - 16px */
 
-
+.disabled-link {
+    color: inherit;
+    opacity: 0.5;
+    cursor: not-allowed;
+    padding: 0.5em 0;
+}
 
     /* Font Weights */   
     --font-weight-semi-light: 400;  /* Semi light */
@@ -39,6 +44,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0; 
+
+
   
 }
 body {
